--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
       <artifactId>guava</artifactId>
       <version>32.1.3-jre</version>
     </dependency>
+    <dependency>
+      <groupId>club.minnced</groupId>
+      <artifactId>discord-webhooks</artifactId>
+      <version>0.8.4</version>
+    </dependency>
 
 
   </dependencies>
