--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
       <artifactId>discord-webhooks</artifactId>
       <version>0.8.4</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-yaml</artifactId>
+      <version>2.16.0</version>
+    </dependency>
+
 
 
   </dependencies>
